# ocs2_coppelia

./: README.md
coppelia_comm/: CMakeLists.txt  package.xml
coppelia_comm/msg/: ballbot_states.msg
coppelia_comm/src/: coppelia_ocs2_bridge(old).cpp  coppelia_ocs2_bridge.cpp
